@@ -1,3 +1,14 @@
+Thu May 25 19:02:52 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * ciao/Container_Base.cpp(ciao_install_home):
+
+          Changed the single-step reinterpret_cast of the component
+          DLL entry points to be a two-step process: first to the
+          integer type 'ptrdiff_t' then to the desired pointer-to-
+          function type. A single cast won't work because casting
+          from pointer-to-object (even void*) to pointer-to-function
+          directly is not allowed in C++.
+
 Thu May 25 11:50:39 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>
 
         * ciao/Container_Base.cpp:
